--- a/website/src/content/docs/docs/howtos/Generate client libraries/03client.mdx
+++ b/website/src/content/docs/docs/howtos/Generate client libraries/03client.mdx
@@ -119,7 +119,7 @@ client.pet();
 ```
 
 ```go
-package petstorev1
+package petstore
 
 type Client struct {}
 
@@ -253,7 +253,7 @@ catsClient.pet();
 
 ```go
 // client.go
-package petstorev1
+package petstore
 
 import (
     "context"
@@ -284,7 +284,7 @@ func (c *Client) sendRequest(ctx context.Context, method, path string) (*http.Re
 
 
 // dogs.go
-package petstorev1
+package petstore
 
 import (
     "context"
@@ -300,7 +300,7 @@ func (c *Client) PetDog(ctx context.Context) (*http.Response, error) {
 }
 
 // cats.go
-package petstorev1
+package petstore
 
 import (
     "context"
@@ -1253,27 +1253,17 @@ opGrp2Client.pet();
 ```
 
 ```go
-package petstorenamespace
+package petstorerenamed
 
-import (
-	"context"
-	"encoding/json"
-	"fmt"
-	"net/http"
-)
-
-// OutputModel represents the resource model with a key 'name'.
 type OutputModel struct {
 	Name string `json:"name"`
 }
 
-// Client is the PetStoreNamespace client.
 type Client struct {
 	endpoint   string
 	httpClient *http.Client
 }
 
-// NewClient creates a new Client with the specified service endpoint.
 func NewClient(endpoint string) *Client {
 	return &Client{
 		endpoint:   endpoint,
@@ -1281,32 +1271,7 @@ func NewClient(endpoint string) *Client {
 	}
 }
 
-// GetModel reads the OutputModel resource identified by 'name'.
-func (c *Client) GetModel(ctx context.Context, name string) (*OutputModel, *http.Response, error) {
-	url := fmt.Sprintf("%s/output/%s", c.endpoint, name)
-	req, err := http.NewRequestWithContext(ctx, http.MethodGet, url, nil)
-	if err != nil {
-		return nil, nil, err
-	}
-
-	req.Header.Set("Accept", "application/json")
-	resp, err := c.httpClient.Do(req)
-	if err != nil {
-		return nil, resp, err
-	}
-	defer resp.Body.Close()
-
-	if resp.StatusCode != http.StatusOK {
-		return nil, resp, fmt.Errorf("failed to get model: status code %d", resp.StatusCode)
-	}
-
-	var model OutputModel
-	if err := json.NewDecoder(resp.Body).Decode(&model); err != nil {
-		return nil, resp, err
-	}
-
-	return &model, resp, nil
-}
+func (c *Client) GetModel(ctx context.Context, name string) (*OutputModel, *http.Response, error) 
 
 ```
 
