[python] fix docs

--- a/website/src/content/docs/docs/howtos/Generate client libraries/03client.mdx
+++ b/website/src/content/docs/docs/howtos/Generate client libraries/03client.mdx
@@ -575,11 +575,11 @@ using Azure.ClientGenerator.Core;
 
 ```python
 # generated _client.py
-class PetStoreClient(_PetStoreClientOperationsMixin):
+class PetStoreGreatClient(_PetStoreGreatClientOperationsMixin):
     def __init__(self, endpoint: str, **kwargs: Any) -> None: ...
 
 # generated _operations/_operations.py
-class _PetStoreClientOperationsMixin:
+class _PetStoreGreatClientOperationsMixin:
 
     @distributed_trace
     def feed(self, **kwargs: Any) -> None:
