--- a/website/src/content/docs/docs/howtos/Generate client libraries/05pagingOperations.mdx
+++ b/website/src/content/docs/docs/howtos/Generate client libraries/05pagingOperations.mdx
@@ -41,7 +41,7 @@ class User(_model_base.Model):
     id: str = rest_field()
     name: str = rest_field()
 
-def list_with_page(self, **kwargs: Any) -> Iterable["_models.User"]:
+def list_with_page(self, **kwargs: Any) -> ItemPaged["_models.User"]:
     ...
 ```
 
@@ -86,7 +86,7 @@ class User(_model_base.Model):
     id: str = rest_field()
     name: str = rest_field()
 
-def list_with_page(self, **kwargs: Any) -> Iterable["_models.User"]:
+def list_with_page(self, **kwargs: Any) -> ItemPaged["_models.User"]:
     ...
 ```
 
@@ -137,7 +137,7 @@ class User(_model_base.Model):
     id: str = rest_field()
     name: str = rest_field()
 
-def list_with_page(self, **kwargs: Any) -> Iterable["_models.User"]:
+def list_with_page(self, **kwargs: Any) -> ItemPaged["_models.User"]:
     ...
 ```
 
@@ -182,7 +182,7 @@ class User(_model_base.Model):
     id: str = rest_field()
     name: str = rest_field()
 
-def list_with_page(self, **kwargs: Any) -> Iterable["_models.User"]:
+def list_with_page(self, **kwargs: Any) -> ItemPaged["_models.User"]:
     ...
 ```
 
@@ -226,7 +226,7 @@ class User(_model_base.Model):
     id: str = rest_field()
     name: str = rest_field()
 
-def list_with_page(self, **kwargs: Any) -> Iterable["_models.User"]:
+def list_with_page(self, **kwargs: Any) -> ItemPaged["_models.User"]:
     ...
 ```
 
@@ -270,7 +270,7 @@ class User(_model_base.Model):
     id: str = rest_field()
     name: str = rest_field()
 
-def list_with_page(self, **kwargs: Any) -> Iterable["_models.User"]:
+def list_with_page(self, **kwargs: Any) -> ItemPaged["_models.User"]:
     ...
 ```
 
