--- a/website/src/content/docs/docs/howtos/Generate client libraries/10versioning.mdx
+++ b/website/src/content/docs/docs/howtos/Generate client libraries/10versioning.mdx
@@ -2,7 +2,7 @@
 title: Versioning
 ---
 
-import { ClientTabs, ClientTabItem } from "@components/client-tabs";
+import { ClientTabs } from "@components/client-tabs";
 
 This doc details what emitters will generate for versioned specs
 
@@ -292,7 +292,7 @@ preview_model = models.PreviewModel(preview_functionality="present")
 
 preview_client.preview_functionality(preview_model) # call goes through
 
-````
+```
 
 ```csharp
 // ServiceVersion enum
@@ -313,7 +313,7 @@ Response response = client.PreviewFunctionality(previewModel);
 //call StableFunctionality
 StableModel stableModel = new StableModel("<stableFeature>");
 Response response = client.StableFunctionality(stableModel);
-````
+```
 
 ```typescript
 // there is no apiVersion parameters defined in all operations, TypeScript emitter will ignore it.
