--- a/website/src/content/docs/docs/howtos/Generate client libraries/10versioning.mdx
+++ b/website/src/content/docs/docs/howtos/Generate client libraries/10versioning.mdx
@@ -229,6 +229,8 @@ In this example, you can see how this change is made in tspconfig.yaml, and we a
 
 <ClientTabs>
 
+<ClientTabItem lang="typespec">
+
 ```yaml title=tspconfig.yaml
 options:
   "@azure-tools/typespec-python":
@@ -273,6 +275,8 @@ op previewFunctionality(@body previewModel: PreviewModel): void;
 
 op stableFunctionality(@body stableModel: StableModel): void;
 ```
+
+</ClientTabItem>
 
 ```python
 import pytest
