--- a/website/src/content/docs/docs/howtos/Generate client libraries/05pagingOperations.mdx
+++ b/website/src/content/docs/docs/howtos/Generate client libraries/05pagingOperations.mdx
@@ -60,7 +60,7 @@ export function listWithPage(
 export class TestServiceClient {
   listWithPage(
     options: ListWithPageOptionalParams = { requestOptions: {} }
-  ): PagedAsyncIterableIterator<__PLACEHOLDER_o44__>;
+  ): PagedAsyncIterableIterator<User>;
 }
 ```
 
@@ -116,7 +116,7 @@ export function listWithPage(
 export class TestServiceClient {
   listWithPage(
     options: ListWithPageOptionalParams = { requestOptions: {} }
-  ): PagedAsyncIterableIterator<__PLACEHOLDER_o44__>;
+  ): PagedAsyncIterableIterator<User>;
 }
 ```
 
@@ -178,7 +178,7 @@ export function listWithPage(
 export class TestServiceClient {
   listWithPage(
     options: ListWithPageOptionalParams = { requestOptions: {} }
-  ): PagedAsyncIterableIterator<__PLACEHOLDER_o44__>;
+  ): PagedAsyncIterableIterator<User>;
 }
 ```
 
@@ -278,7 +278,7 @@ export function listWithPage(
 export class TestServiceClient {
   listWithPage(
     options: ListWithPageOptionalParams = { requestOptions: {} }
-  ): PagedAsyncIterableIterator<__PLACEHOLDER_o44__>;
+  ): PagedAsyncIterableIterator<User>;
 }
 ```
 
@@ -333,7 +333,7 @@ export function listWithPage(
 export class TestServiceClient {
   listWithPage(
     options: ListWithPageOptionalParams = { requestOptions: {} }
-  ): PagedAsyncIterableIterator<__PLACEHOLDER_o44__>;
+  ): PagedAsyncIterableIterator<User>;
 }
 ```
 
