--- a/website/src/content/docs/docs/howtos/Generate client libraries/07multipart.mdx
+++ b/website/src/content/docs/docs/howtos/Generate client libraries/07multipart.mdx
@@ -60,7 +60,7 @@ export async function upload(
 // Modular classical client layer
 export class TestServiceClient {
    upload(
-    body: __PLACEHOLDER_o45__,
+    body: MultipartRequest,
     options: UploadOptionalParams = { requestOptions: {} },
   ): Promise<void>;
 }
