--- a/website/src/content/docs/docs/libraries/typespec-client-generator-core/reference/index.mdx
+++ b/website/src/content/docs/docs/libraries/typespec-client-generator-core/reference/index.mdx
@@ -66,3 +66,9 @@ npm install --save-peer @azure-tools/typespec-client-generator-core
 
 - [`ClientInitializationOptions`](./data-types.md#Azure.ClientGenerator.Core.ClientInitializationOptions)
 - [`ClientOptions`](./data-types.md#Azure.ClientGenerator.Core.ClientOptions)
+
+## Azure.ClientGenerator.Core.Legacy
+
+### Decorators
+
+- [`@legacyHierarchyBuilding`](./decorators.md#@Azure.ClientGenerator.Core.Legacy.legacyHierarchyBuilding)
